2007-07-20  Inge Wallin  <inge@lysator.liu.se>

	Remove warnings
	* src/lib/gps/GpxSax.cpp: Remove most warnings
	* src/lib/AbstractLayer/AbstractLayer.cpp
	* src/lib/AbstractLayer/AbstractLayerData.cpp
	* src/lib/placemarkpainter.cpp
	* src/lib/kml/KMLObject.cpp
	* src/lib/kml/KMLPointParser.cpp
	* src/lib/kml/KMLFeatureParser.cpp
	* src/lib/HttpDownloadManager.cpp
	* src/lib/TextureTile.cpp
	* src/lib/texcolorizer.cpp
	Remove all warnings, 

	Fix Krazy issue 18: Inappropriate pass-by-value.
	* src/lib/MarbleWidget.cpp (openGpxFile): Take QString& instead of
	QString.

2007-07-19  Torsten Rahn  <rahn@kde.org>

- Adding a GUI item to change the projection. Disabled for now.

2007-07-19  Inge Wallin  <inge@lysator.liu.se>

	Put more stuff into ViewParams.
	* src/lib/ViewParams.h (ViewParams): New members: m_radius,
	m_radiusUpdated, m_planetAxis, m_planetAxisUpdated.
	* src/lib/ViewParams.cpp (ViewParams): Initialize new members
	* src/lib/Marble{Model,Widget}.{h,cpp}: Move lots of methods from
	MarbleModel to MarbleWidget.
	(paintGlobe): New parameter redrawBackground
	* src/lib/katlasviewinputhandler.{h,cpp}: adapt to changes above.
	
2007-07-18  Torsten Rahn  <rahn@kde.org>

- Redo for the GPS tab (Now called "Current Location")
- Disabling that widget as it's meant to be offered just for a
particular use case where Marble is meant to provide a dialog

Sorry Andrew - I needed these changes immediately 
for a presentation yesterday.

2007-07-15  Torsten Rahn  <rahn@kde.org>

- Making Marble compile again.

2007-07-12  Andrew Manson   <g.real.ate@gmail.com>
    Cleaned up the comments for all of the AbstractLayer classes and
    formalised the api more.
    
    AbstractLayer now contains a Vector of AbstractLayerContainers 
    and a simple implementation to call each of their draw() methods
    when the AbstractLayer draw() method is called.
    * src/lib/AbstractLayer/AbstractLayer.{h,cpp}
    
2007-07-12  Murad Tagirov  <tmurad@gmail.com>